--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <img src="62892fade3994.jpg" alt="62892fade3994.jpg">
 
-    <h2>Newton Guimarãe</h2>
+    <h2>Newton Guimarães</h2>
     <p> O Newton guimarães é um colégio dahora d+, recomenmdo demais você vir estudar aqui, têm professore legais, comida boa, gente legal. Cola junto no NEWTÃO</p>
     
     
