--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <img src="62892fade3994.jpg" alt="62892fade3994.jpg">
 
     <h2>Newton Guimarães</h2>
-    <p> O Newton guimarães é um colégio dahora d+, recomendo demais você vir estudar aqui, têm professoreS legais, comida boa, gente legal. Cola junto no NEWTÃO</p>
+    <p> O Newton guimarães é um colégio dahora d+, recomendo demais você vir estudar aqui, têm professores legais, comida boa, gente legal e muito mais. Cola junto no NEWTÃO</p>
     <p>Você sabia que o Newton tem uma das melhores médias do Paraná na Prova Diagnóstica "Prova Paraná"? 
     Por isso eu digo que você tem que vir pra cá, faça parte dessa grande média! Compartilhe seu conhecimento e aprendizado conosco!<p>
-    
+
+        
  
      <img src="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg" alt="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg">
 </body>
