--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Você sabia que o Newton tem uma das melhores médias do Paraná na Prova Diagnóstica "Prova Paraná"? 
     Por isso eu digo que você tem que vir pra cá, faça parte dessa grande média! Compartilhe seu conhecimento e aprendizado conosco!<p>
 
-        
+      <img src="images.jpeg" alt="images.jpeg">  
  
      <img src="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg" alt="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg">
 </body>
