--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <p>Você sabia que o Newton tem uma das melhores médias do Paraná na Prova Diagnóstica "Prova Paraná"? 
     Por isso eu digo que você tem que vir pra cá, faça parte dessa grande média! Compartilhe seu conhecimento e aprendizado conosco!<p>
 
-      <img src="images.jpeg" alt="images.jpeg">  
+      <img src="Basquete.jpg" alt="Basquete.jpg">  
+        <p>Não se você sabe, mas o Newton tem um time de basquete, um para pessoas nas base de 10-14 anos e outra pra pessoas na base de
+        15-18 anos, aproximadamente. Ambos os times já chegaram a disputar a Liga Brasileira de Basquete, no caso já venceram o Paranaense,
+        venceram o regional e passaram para o Brasileiro, chegando ao top 3! Imagina se você por acaso é fã de basquete e quer entrar
+        para um time, aí está mais um motivo para você entra pro Newton. <p>
+        <img src="Basquete.jpg" alt="Basquete.jpg">  
  
      <img src="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg" alt="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg">
 </body>
