--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         15-18 anos, aproximadamente. Ambos os times já chegaram a disputar a Liga Brasileira de Basquete, no caso já venceram o Paranaense,
         venceram o regional e passaram para o Brasileiro, chegando ao top 3! Imagina se você por acaso é fã de basquete e quer entrar
         para um time, aí está mais um motivo para você entra pro Newton. <p>
-        <img src="images.jpeg">  
+         <img src="images.jpeg" alt="images.jpeg">   
  
      <img src="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg" alt="fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg">
 </body>
