--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
   <p>Uma outra coisa bem dahora, é que temos gincana na escola, então normalmente todas as salas competem entre sí, fazendo 
     várias atividades legais e engraçadas em busca de pontuação para a sala. A sala que mais tiver ponto ganha nota extra nas matérias,
     todos ganham, mas o campeão ganha mais.<p>          
-
-    <a href="https://liviero-2md.vercel.app/fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg">Geral depois da gincana fica tipo:</a>
+<p>o engraçado é que todo mundo <p><a href="https://liviero-2md.vercel.app/fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg">DEPOIS DA GINCANA FICA TIPO:</a>
 </body>
 </html>
