--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     várias atividades legais e engraçadas em busca de pontuação para a sala. A sala que mais tiver ponto ganha nota extra nas matérias,
     todos ganham, mas o campeão ganha mais.<p>          
 <p>o engraçado é que: <p><a href="https://liviero-2md.vercel.app/fa2d25b6c60602eeb54c811c0d358d62014b615b7ccfa7f300df81fd2679b4e6_1.jpg">TODO MUNDO FICA ASSIM QUANDO A GINCANA ACABA!:</a>
+
+<a href="https://liviero-2md.vercel.app/pagina2.html"> Ir para a página 1</a>
 </body>
 </html>
