--- a/pagina2.html
+++ b/pagina2.html
@@ -5,7 +5,7 @@
 <title>pagina 1</title>
 </head>
     <body>
-        <h1>Texto do Fred</h1>
+        <h1>Texto do JOÃO HENRIQUE LIVIERO LIMA 2MD NÚMERO 17</h1>
      <br>
         <h2> Subtitle 1</h2>
         <h3> Subtitle 2</h3>
