--- a/pagina2.html
+++ b/pagina2.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Texto do JOÃO HENRIQUE LIVIERO LIMA 2MD NÚMERO 17</h1>
      <br>
-      
+       <img src="62892fade3994.jpg" alt="62892fade3994.jpg">
         <br>
         <br>
         <a href="https://liviero-2md.vercel.app/"> Ir para a página 1</a>
