--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title></title>
 </head>
 <body>
-<h1>TRABALHO DE JOÃO HENRIQUE LIVIERO LIMA - NÚMERO 17 - 2MD - TRABALHO DE PROGRAMAÇÃO</h1>
+<h1>TRABALHO DE: JOÃO HENRIQUE LIVIERO LIMA - NÚMERO 17 - 2MD - TRABALHO DE PROGRAMAÇÃO</h1>
     <br>
     <h1>VALE A PENA ESTUDAR NO NEWTÃO?!</h1>
     
