--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
     todos ganham, mas o campeão ganha mais.<p>          
 <a href="https://liviero-2md.vercel.app/pagina2.html"> GERAL FICA ASSIM NO FINAL </a>
 <br>
- <br>
 <br>
+      <a href="https://liviero-2md.vercel.app/pagina2.html"> VALEU POR LER ATÉ O FINAL, BAIXE AQUI SEU CERTIFICADO!</a>  
+        <br>
+
+        <br>
    <a href="https://classroom.google.com/u/2/c/NjQ3NTk5MTM4MzMz"> Vamos voltar onde tudo isso começou? O GRANDE PONTO 0 </a>     
 </body>
 </html>
