--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <a href="https://liviero-2md.vercel.app/pagina2.html"> GERAL FICA ASSIM NO FINAL </a>
 <br>
 <br>
-      <a href="https://liviero-2md.vercel.app/pagina2.html"> VALEU POR LER ATÉ O FINAL, BAIXE AQUI SEU CERTIFICADO!</a>  
+      <a href="RIFFzD"> VALEU POR LER ATÉ O FINAL, BAIXE AQUI SEU CERTIFICADO!</a>  
         <br>
 
         <br>
