--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
-    <title></title>
+    <title>Site do João H.</title>
 </head>
 <body>
 <h2>TRABALHO DE: JOÃO HENRIQUE LIVIERO LIMA - NÚMERO 17 - 2MD - TRABALHO DE PROGRAMAÇÃO - PROFESSOR ROGÉRIO D. F. REIS</h2>
