--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <title>Site do João H.</title>
+    <link rel="styleheet" href="style.css">
 </head>
 <body>
 <h2>TRABALHO DE: JOÃO HENRIQUE LIVIERO LIMA - NÚMERO 17 - 2MD - TRABALHO DE PROGRAMAÇÃO - PROFESSOR ROGÉRIO D. F. REIS</h2>
